added new CSS shadows

--- a/assets/style.css
+++ b/assets/style.css
@@ -39,7 +39,7 @@ p {
     width: 80%;
     margin: 40px auto;
     border: 5px solid #2E4053;
-    box-shadow: 5px 10px #2E4053;
+    box-shadow: 5px 10px 10px #2E4053;
   }
 
   
